# fin-assistant

./: .env.example  .gitignore  Dockerfile  README.MD  README.md  docker-compose.yml  pyproject.toml
app/: enums.py  settings.py  ui.py
app/clients/: openai_client.py  redis.py
app/data/: accounts.json  cash_balances.json  fund_metadata.json  holdings.json  latest_prices.py  load.py  mock_transactions.json
app/models/: tool_memory.py
app/schema/: goals.py  tools.py
app/server/: main.py
app/server/routes/: chat.py
app/server/schemes/: chat.py
app/services/: agent_manager.py  history.py  llm_agent.py  tool_dispatcher.py
app/tools/: analyze_performance.py  base.py  fee_optimizer.py  rebalance_portfolio.py  registry.py  tool_errors.py
app/utils/: token_estimate.py
